# spuc3d

./: .gitignore  Cargo.toml  LICENSE  README.md  debug-arm.sh
assets/: Anna.mtl  airplane.mtl  earth.mtl  stormtrooper.mtl
assets/font/: dejavu_sans.fnt
examples/: earth.mtl  rotating_cube copy.rs  rotating_cube.rs
src/: lib.rs
src/renderer/: font.rs  mod.rs
src/renderer/core/: math.rs  math_cpu.rs  math_simd.rs  pipeline.rs  pipeline_extensions.rs  rasterizer.rs  transform.rs
src/renderer/ffi/: mod.rs
src/renderer/geometry/: mod.rs  obj_loader.rs
src/renderer/shader/: default.rs  mod.rs  multilight.rs  simplelight.rs
src/renderer/shadow/: mod.rs
src/renderer/texture/: mod.rs
